# Nimroo

./: .gitignore  LICENSE  README.md  nima_exporter.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
scripts/: build_standalone.py
